--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#FF0000</color>
+    <color name="light_blue">#37C2F8</color>
+    <color name="yellow">#F8C511</color>
+    <color name="gray">#B5B3B3</color>
 </resources>
