--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,14 +36,16 @@
             android:layout_marginBottom="5dp"/>
 
         <EditText
+            android:id="@+id/txtValor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/hint_valor"
             android:layout_marginBottom="10dp"
+            android:inputType="number"
             android:textSize="20sp"/>
 
         <Button
-            android:id="@+id/botaoGastos"
+            android:onClick="botaoGastos"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
