--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             android:hint="@string/hint_valor"
             android:layout_marginBottom="10dp"
-            android:inputType="number"
+            android:inputType="text"
             android:textSize="20sp"/>
 
         <Button
@@ -51,19 +51,34 @@
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
-            android:text="@string/texto_botao"/>
+            android:text="@string/texto_botao"
+            android:backgroundTint="@color/black"
+            android:textColor="@color/red"/>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            android:text="@string/botao_mostrar"
+            android:backgroundTint="@color/black"
+            android:textColor="@color/red"
+            android:onClick="carregar"/>
 
 
 
-        <androidx.recyclerview.widget.RecyclerView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/layoutResultado"
             android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp">
+            android:layout_marginEnd="10dp"
+            android:orientation="vertical"
+            android:textAlignment="center">
 
 
-        </androidx.recyclerview.widget.RecyclerView>
+        </LinearLayout>
 
 
 
